; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_sfs.c_grub_sfs_label.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_sfs.c_grub_sfs_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.grub_sfs_data = type { i8* }

@grub_errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8**)* @grub_sfs_label to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_sfs_label(%struct.TYPE_3__* %0, i8** %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.grub_sfs_data*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8** %1, i8*** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call %struct.grub_sfs_data* @grub_sfs_mount(i32 %10)
  store %struct.grub_sfs_data* %11, %struct.grub_sfs_data** %5, align 8
  %12 = load %struct.grub_sfs_data*, %struct.grub_sfs_data** %5, align 8
  %13 = icmp ne %struct.grub_sfs_data* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load %struct.grub_sfs_data*, %struct.grub_sfs_data** %5, align 8
  %16 = getelementptr inbounds %struct.grub_sfs_data, %struct.grub_sfs_data* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = load i8**, i8*** %4, align 8
  store i8* %17, i8** %18, align 8
  br label %19

19:                                               ; preds = %14, %2
  %20 = load %struct.grub_sfs_data*, %struct.grub_sfs_data** %5, align 8
  %21 = call i32 @grub_free(%struct.grub_sfs_data* %20)
  %22 = load i32, i32* @grub_errno, align 4
  ret i32 %22
}

declare dso_local %struct.grub_sfs_data* @grub_sfs_mount(i32) #1

declare dso_local i32 @grub_free(%struct.grub_sfs_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
